updated graph files